--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="css/index.css">
  </head>
  <body>
-    <h1>Hello, world!</h1>
+    <h1>New site</h1>
     <img src="img/dog.png" >
  </body>
 </html>
